# nsh

./: .clang-format  .gitignore  AUTHORS  CHANGELOG  Makefile.am  Makefile.common  README  README.md  TODO  autogen.sh  bootstrap  configure.ac  flake.nix  meson.build  meson_options.txt  shell.nix  valgrind.sh  valgrind.supp
doc/: 42sh.1  Doxyfile.in  doxyconfig  meson.build  nsh.1
includes/: aassignement.h  abool_op.h  acase.h  acmd.h  afor.h  afunction.h  aif.h  alist.h  apipe.h  aredirection.h  ast.h  auntil.h  awhile.h  buf.h  lexer.h  wordlist.h
includes/ast/: assignement.h  assignment.h  (+16 more)
src/: lexer.c  main.c  nsh.c
src/exec/: args.c  args.h  assignment.c  ast_exec.c  block.c  bool_op.c  break.c  break.h  builtins.c  case.c  clean_exit.c  cmd.c  context.c  control_flow.c  environment.c  error_compat.h  execution_error.h  for.c  function.c  history.c  if.c  list.c  loops.c  managed_fork.c  meson.build  pipe.c  proc_utils.c  proc_utils.h  process_manager.c  redirection.c  repl.c  repl_state.c  runtime_error.c  shopt.c  subshell.c  value.c  while.c  wordlist.c
src/exec/api/nsh_exec/: arithmetic_expansion.h  ast_exec.h  clean_exit.h  environment.h  execution.h  expansion.h  expansion_callback.h  expansion_result.h  glob.h  history.h  managed_fork.h  process_manager.h  repl.h  runtime_error.h  value.h
src/exec/api/shexec/: break.h  clean_exit.h  environment.h  expansion.h  repl.h  runtime_error.h
src/exec/builtins/: break.c  cd.c  echo.c  exit.c  export.c  printf.c  shopt.c  source.c  unset.c
src/exec/expansion/: arithmetic_expansion.c  arithmetic_expansion.h  expansion.c  expansion.h  expansion_special.c  expansion_state.h  glob.c  operators.py  prompt.c  subshell.c
src/interactive/: builtin_history.c  cmdopts.c  cstream_dispatch.c  cstream_dispatch.h  cstream_readline.c  cstream_readline.h  history.h  interactive_repl.c  managed_stream.c  meson.build  parse_cli_options.c  readline_wrapped.c  readline_wrapped.h
src/interactive/api/nsh_interactive/: cli.h  interactive_repl.h  managed_stream.h
src/io/: Makefile.am  cstream.c  cstream_file.c  cstream_ops.c  cstream_readline.c  cstream_string.c  keyboard_interrupt.c  managed_stream.c  meson.build  readline_wrapped.c
src/io/api/io/: cstream.h  cstream_string.h
src/io/api/nsh_io/: cstream.h  cstream_file.h  cstream_readline.h  cstream_string.h  keyboard_interrupt.h
src/lex/: lexer.c  lexer.h  lexer_error.c  meson.build  print.c  sublexer_regular.c  sublexers.c  tok.c  token.c  wlexer.c
src/lex/api/nsh_lex/: lexer.h  lexer_error.h  name_keywords.defs  print.h  token.h  tokens.defs  variable.h  wlexer.h
src/lex/api/shlex/: lexer.h
src/nsh/: Makefile.am  builtin_history.c  cmdopts.c  config.h  cstream_readline.c  managed_stream.c  managed_stream.h  meson.build  nsh.c  readline_wrapped.h
src/parse/: ast_free.c  ast_print.c  meson.build  parse.c  parse.h  parse_case.c  parse_command.c  parse_for.c  parse_if.c  parse_list.c  parse_redirection.c  parse_simple_command.c  parse_while.c  parse_word.c  parser_error.c
src/parse/api/nsh_parse/: ast.h  parse.h  parser_error.h  wordlist.h
src/shexec/: Makefile.am  args.c  assignement.c  assignment.c  ast_exec.c  ast_free.c  ast_list.c  ast_print.c  block.c  bool_op.c  break.c  builtins.c  case.c  cd.c  clean_exit.c  cmd.c  context.c  echo_built.c  environment.c  expansion.c  for.c  function.c  history.c  if.c  list.c  managed_fork.c  meson.build  pipe.c  process_manager.c  redirection.c  redirection_free.c  redirection_utils.c  repl.c  shopt.c  shopt_built.c  subshell.c  test.c  until.c  value.c  while.c  (+1 more)
src/shexec/api/shexec/: ast_exec.h  config.h  execution.h  expansion.h  glob.h  history.h  managed_fork.h
src/shexec/builtins/: break.c  cd.c  echo.c  exit.c  export.c  history.c  printf.c  shopt.c  source.c  unset.c
src/shexec/expansion/: arithmetic_expansion.c  expansion.c  expansion_special.c  operators.defs  prompt.c  subshell.c
src/shexp/: Makefile.am  arithmetic_expansion.c  arth_exec.c  arth_exec_bitwise.c  arth_exec_bool.c  arth_exec_classical.c  arth_lex.c  arth_parser.c  arth_parser_bitwise.c  arth_parser_bool.c  arth_parser_classical.c  arth_word.c  expansion.c  expansion_arth.c  expansion_backquot.c  expansion_special.c  expansion_subshell.c  glob.c  operators.defs  operators.py  prompt.c  subshell.c  unquote.c
src/shlex/: Makefile.am  breaking.c  lexer.c  lexer_error.c  meson.build  print.c  simple_variable.c  sublexer_regular.c  sublexers.c  testlex.c  tok.c  wlexer.c  word.c
src/shlex/api/shlex/: lexer.h  lexer_error.h  operators.defs
src/shparse/: Makefile.am  ast_free.c  ast_print.c  commande.c  compound_list.c  meson.build  parse.c  parse_case.c  parse_command.c  parse_commande.c  parse_compound_list.c  parse_for.c  parse_funcdec.c  parse_if.c  parse_list.c  parse_redirection.c  parse_simple_command.c  parse_while.c  parse_word.c  parser_error.c  redirection.c  word.c
src/shparse/api/shparse/: ast.h  wordlist.h
src/shwlex/: Makefile.am  meson.build  wlexer.c
src/utils/: Makefile.am  dbuf.c  error.c  evect.c  exception.c  gvect.defs  hash_table.c  hash_table_map.c  hashmap.c  lineinfo.c  logging.c  meson.build  mprintf.c  parsing.c  pathutils.c  pvect.c  refcnt.c  signal_lut.c  signal_manager.c  signal_manager_pipe.c  signal_manager_pipe.h  signal_pipe.c  strsplit.c  xalloc.c  xmalloc.c
src/utils/api/nsh_utils/: alloc.h  attr.h  char_bitset.h  cpvect.h  error.h  evect.h  exception.h  gvect.defs  gvect.h  hashmap.h  hashmap_iterators.h  lineinfo.h  list.h  logging.h  macros.h  mprintf.h  pathutils.h  progname.h  pvect.h  pvect_wrap.h  ring_buffer.h  safe_syscalls.h  signal_list.h  signal_lut.h  signal_manager.h  signal_pipe.h  static_refcnt.h  strutils.h
src/utils/api/utils/: alloc.h  error.h  evect.h  gvect.h  list.h  parsing.h  pathutils.h  pvect_wrap.h  refcnt.h  signal_manager.h  strutils.h
tests/: afl_config.sh  afl_fuzz_master.sh  afl_fuzz_slave.sh  afl_gen_input.sh  afl_run.sh  afl_tmin.sh  check.py  create_test.sh  gen_itests_mk.sh  itests.mk  master.cfg  mount_chroot.sh  parse_interupt.py  run_chroot.sh  run_tests
(+261 files in other folders)
