exec_sources = [
    'args.c',
    'assignment.c',
    'ast_exec.c',
    'block.c',
    'bool_op.c',
    'break.c',
    'builtins.c',
    'builtins/break.c',
    'builtins/cd.c',
    'builtins/echo.c',
    'builtins/exit.c',
    'builtins/export.c',
    'builtins/printf.c',
    'builtins/shopt.c',
    'builtins/source.c',
    'builtins/unset.c',
    'case.c',
    'cmd.c',
    'environment.c',
    'for.c',
    'function.c',
    'if.c',
    'list.c',
    'managed_fork.c',
    'pipe.c',
    'redirection.c',
    'runtime_error.c',
    'subshell.c',
    'value.c',
    'while.c',
    'wordlist.c',
    'shopt.c',
    'expansion/arithmetic_expansion.c',
    'expansion/expansion.c',
    'expansion/expansion_special.c',
    'expansion/glob.c',
    'expansion/prompt.c',
    'expansion/subshell.c',
    'context.c',
    'repl.c',
    'history.c',
    'clean_exit.c',
]

exec_api = include_directories('api', is_system: true)
exec_lib = library(
    'exec',
    exec_sources,
    install: true,
    include_directories: exec_api,
    dependencies: [nsh_utils, nsh_io, nsh_parser, nsh_lexer],
)

nsh_exec = declare_dependency(
    include_directories: [exec_api, parser_api, lexer_api],
    link_with: exec_lib,
)