include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = cstream.c \
                   cstream_readline.c \
                   cstream_file.c \
                   cstream_string.c \
                   managed_stream.c \
                   readline_wrapped.c \
                   $(TOP_INCL)/io/cstream.h \
                   $(TOP_INCL)/io/cstream_file.h \
                   $(TOP_INCL)/io/cstream_readline.h \
                   $(TOP_INCL)/io/cstream_string.h \
                   $(TOP_INCL)/io/readline_wrapped.h \
                   $(TOP_INCL)/io/managed_stream.h
