include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = \
    $(TOP_INCL)/io/cstream.h \
    $(TOP_INCL)/io/cstream_file.h \
    $(TOP_INCL)/io/cstream_readline.h \
    $(TOP_INCL)/io/cstream_string.h \
    $(TOP_INCL)/io/keyboard_interrupt.h \
    $(TOP_INCL)/io/managed_stream.h \
    $(TOP_INCL)/io/readline_wrapped.h \
    cstream.c \
    cstream_file.c \
    cstream_readline.c \
    cstream_string.c \
    keyboard_interrupt.c \
    managed_stream.c \
    readline_wrapped.c
