include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshexec.la

libshexec_la_SOURCES = \
    $(TOP_INCL)/shexec/args.h \
    $(TOP_INCL)/shexec/break.h \
    $(TOP_INCL)/shexec/builtin_cd.h \
    $(TOP_INCL)/shexec/builtins.h \
    $(TOP_INCL)/shexec/clean_exit.h \
    $(TOP_INCL)/shexec/environment.h \
    $(TOP_INCL)/shexec/execution.h \
    $(TOP_INCL)/shexec/managed_fork.h \
    $(TOP_INCL)/shexec/runtime_error.h \
    args.c \
    assignment.c \
    ast_exec.c \
    ast_free.c \
    ast_print.c \
    block.c \
    bool_op.c \
    break.c \
    builtins.c \
    builtins/break.c \
    builtins/cd.c \
    builtins/echo.c \
    builtins/exit.c \
    builtins/export.c \
    builtins/history.c \
    builtins/printf.c \
    builtins/shopt.c \
    builtins/source.c \
    builtins/unset.c \
    case.c \
    clean_exit.c \
    cmd.c \
    environment.c \
    for.c \
    function.c \
    if.c \
    list.c \
    managed_fork.c \
    pipe.c \
    redirection.c \
    runtime_error.c \
    subshell.c \
    value.c \
    while.c \
    wordlist.c
