include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshexec.la

libshexec_la_SOURCES = \
    $(TOP_INCL)/shexec/args.h \
    $(TOP_INCL)/shexec/break.h \
    $(TOP_INCL)/shexec/builtin_cd.h \
    $(TOP_INCL)/shexec/builtins.h \
    $(TOP_INCL)/shexec/clean_exit.h \
    $(TOP_INCL)/shexec/environment.h \
    $(TOP_INCL)/shexec/execution.h \
    $(TOP_INCL)/shexec/managed_fork.h \
    $(TOP_INCL)/shexec/runtime_error.h \
    args.c \
    assignment.c \
    ast_exec.c \
    block.c \
    bool_op.c \
    break.c \
    builtins.c \
    builtins/break.c \
    builtins/cd.c \
    builtins/echo.c \
    builtins/exit.c \
    builtins/export.c \
    builtins/printf.c \
    builtins/shopt.c \
    builtins/source.c \
    builtins/unset.c \
    case.c \
    clean_exit.c \
    cmd.c \
    environment.c \
    for.c \
    function.c \
    if.c \
    list.c \
    managed_fork.c \
    pipe.c \
    redirection.c \
    runtime_error.c \
    subshell.c \
    value.c \
    while.c \
    wordlist.c \
    shopt.c \
    $(TOP_INCL)/shexec/arithmetic_expansion.h \
    $(TOP_INCL)/shexec/expansion.h \
    $(TOP_INCL)/shexec/expansion_callback.h \
    $(TOP_INCL)/shexec/expansion_result.h \
    $(TOP_INCL)/shexec/glob.h \
    expansion/arithmetic_expansion.c \
    expansion/expansion.c \
    expansion/expansion_special.c \
    expansion/glob.c \
    expansion/operators.defs \
    expansion/operators.py \
    expansion/prompt.c \
    expansion/subshell.c \
    context.c \
    repl.c \
    history.c
