exec_sources = [
    'args.c',
    'assignment.c',
    'ast_exec.c',
    'block.c',
    'bool_op.c',
    'break.c',
    'builtins.c',
    'builtins/break.c',
    'builtins/cd.c',
    'builtins/echo.c',
    'builtins/exit.c',
    'builtins/export.c',
    'builtins/printf.c',
    'builtins/shopt.c',
    'builtins/source.c',
    'builtins/unset.c',
    'case.c',
    'clean_exit.c',
    'cmd.c',
    'environment.c',
    'for.c',
    'function.c',
    'if.c',
    'list.c',
    'managed_fork.c',
    'pipe.c',
    'redirection.c',
    'runtime_error.c',
    'subshell.c',
    'value.c',
    'while.c',
    'wordlist.c',
    'shopt.c',
    'expansion/arithmetic_expansion.c',
    'expansion/expansion.c',
    'expansion/expansion_special.c',
    'expansion/glob.c',
    'expansion/prompt.c',
    'expansion/subshell.c',
    'context.c',
    'repl.c',
    'history.c',
]

nsh_exec = library(
    'exec',
    exec_sources,
    include_directories: nsh_headers,
    link_with: [nsh_utils, nsh_io, nsh_parser, nsh_wlexer, nsh_lexer],
)
