include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshexp.la

libshexp_la_SOURCES = arth_word.c expansion_arth.c \
                      arth_exec_bool.c arth_exec_bitwise.c \
                      arth_exec_classical.c arth_exec.c expansion.c \
                      subshell.c expansion_special.c arth_lex.c \
                      arth_parser_bool.c arth_parser_classical.c \
                      arth_parser_bitwise.c arth_parser.c \
                      $(TOP_INCL)/arth.h \
                      $(TOP_INCL)/shexp/variable.h \
                      $(TOP_INCL)/shexp/expansion.h
