include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshexp.la

libshexp_la_SOURCES = expansion.c \
                      subshell.c expansion_special.c \
                      arithmetic_expansion.c \
                      operators.defs \
                      operators.py \
                      $(TOP_INCL)/shexp/variable.h \
                      $(TOP_INCL)/shexp/expansion.h
