include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshexp.la

libshexp_la_SOURCES = \
    $(TOP_INCL)/shexp/arithmetic_expansion.h \
    $(TOP_INCL)/shexp/expansion.h \
    $(TOP_INCL)/shexp/expansion_callback.h \
    $(TOP_INCL)/shexp/expansion_result.h \
    $(TOP_INCL)/shexp/glob.h \
    arithmetic_expansion.c \
    expansion.c \
    expansion_special.c \
    glob.c \
    operators.defs \
    operators.py \
    prompt.c \
    subshell.c
