include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libshlex.la

libshlex_la_SOURCES = \
    $(TOP_INCL)/shlex/keywords.defs \
    $(TOP_INCL)/shlex/lexer.h \
    $(TOP_INCL)/shlex/lexer_error.h \
    $(TOP_INCL)/shlex/name_keywords.defs \
    $(TOP_INCL)/shlex/operators.defs \
    $(TOP_INCL)/shlex/other_tokens.defs \
    $(TOP_INCL)/shlex/print.h \
    $(TOP_INCL)/shlex/tokens.defs \
    $(TOP_INCL)/shlex/variable.h \
    lexer.c \
    lexer_error.c \
    print.c \
    sublexer_regular.c \
    sublexers.c \
    tok.c
