include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libparse.la

libparse_la_SOURCES = parse.c parse_command.c parse_redirection.c\
                      parse_word.c parse_compound_list.c parse_for.c\
                      parse_while.c parse_if.c parse_case.c\
                      parse_funcdec.c parse_simple_command.c
