include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libparse.la

libparse_la_SOURCES = parse.c parse_command.c parse_redirection.c \
                      parse_word.c parse_compound_list.c parse_for.c \
                      parse_while.c parse_if.c parse_case.c \
                      parse_funcdec.c parse_simple_command.c \
                      $(TOP_INCL)/shparse/parse.h \
                      $(TOP_INCL)/ast/assignment.h \
                      $(TOP_INCL)/ast/ast.h \
                      $(TOP_INCL)/ast/ast_list.h \
                      $(TOP_INCL)/ast/block.h \
                      $(TOP_INCL)/ast/bool_op.h \
                      $(TOP_INCL)/ast/case.h \
                      $(TOP_INCL)/ast/cmd.h \
                      $(TOP_INCL)/ast/for.h \
                      $(TOP_INCL)/ast/function.h \
                      $(TOP_INCL)/ast/if.h \
                      $(TOP_INCL)/ast/list.h \
                      $(TOP_INCL)/ast/pipe.h \
                      $(TOP_INCL)/ast/redirection.h \
                      $(TOP_INCL)/ast/until.h \
                      $(TOP_INCL)/ast/while.h \
                      $(TOP_INCL)/ast/wordlist.h
