include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libparse.la

libparse_la_SOURCES = \
    $(TOP_INCL)/shparse/ast.h \
    $(TOP_INCL)/shparse/parse.h \
    $(TOP_INCL)/shparse/parser_error.h \
    $(TOP_INCL)/shparse/wordlist.h \
    parse.c \
    parse_case.c \
    parse_command.c \
    parse_for.c \
    parse_if.c \
    parse_list.c \
    parse_redirection.c \
    parse_simple_command.c \
    parse_while.c \
    parse_word.c \
    parser_error.c
