include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libutils.la

libutils_la_SOURCES = xalloc.c \
                      gvect.defs \
                      evect.c \
                      pvect.c \
                      error.c \
                      hash_table.c \
                      refcnt.c \
                      mprintf.c \
                      lineinfo.c \
                      pathutils.c \
                      $(TOP_INCL)/utils/alloc.h \
                      $(TOP_INCL)/utils/mprintf.h \
                      $(TOP_INCL)/utils/error.h \
                      $(TOP_INCL)/utils/evect.h \
                      $(TOP_INCL)/utils/macros.h \
                      $(TOP_INCL)/utils/lineinfo.h \
                      $(TOP_INCL)/utils/hash_table.h \
                      $(TOP_INCL)/utils/attr.h \
                      $(TOP_INCL)/utils/pathutils.h \
                      $(TOP_INCL)/utils/progname.h
