include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libutils.la

libutils_la_SOURCES = \
    $(TOP_INCL)/utils/alloc.h \
    $(TOP_INCL)/utils/attr.h \
    $(TOP_INCL)/utils/cpvect.h \
    $(TOP_INCL)/utils/error.h \
    $(TOP_INCL)/utils/evect.h \
    $(TOP_INCL)/utils/gvect.h \
    $(TOP_INCL)/utils/gvect_common.h \
    $(TOP_INCL)/utils/hash_table.h \
    $(TOP_INCL)/utils/lineinfo.h \
    $(TOP_INCL)/utils/list.h \
    $(TOP_INCL)/utils/macros.h \
    $(TOP_INCL)/utils/mprintf.h \
    $(TOP_INCL)/utils/parsing.h \
    $(TOP_INCL)/utils/pathutils.h \
    $(TOP_INCL)/utils/progname.h \
    $(TOP_INCL)/utils/pvect.h \
    $(TOP_INCL)/utils/pvect_wrap.h \
    $(TOP_INCL)/utils/refcnt.h \
    $(TOP_INCL)/utils/safe_syscalls.h \
    $(TOP_INCL)/utils/signal_list.h \
    $(TOP_INCL)/utils/signal_lut.h \
    $(TOP_INCL)/utils/signal_manager.h \
    $(TOP_INCL)/utils/signal_pipe.h \
    $(TOP_INCL)/utils/strutils.h \
    error.c \
    evect.c \
    gvect.defs \
    hash_table.c \
    lineinfo.c \
    mprintf.c \
    parsing.c \
    pathutils.c \
    pvect.c \
    refcnt.c \
    signal_lut.c \
    signal_manager.c \
    signal_pipe.c \
    xalloc.c
